// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EpicExpander ui is closed 1`] = `
<Button
  color="dark"
  icon="expand_more"
  onClick={[Function]}
/>
`;

exports[`Component: EpicExpander ui is open 1`] = `
<Button
  color="dark"
  icon="expand_less"
  onClick={[Function]}
/>
`;
